--- a/OOPAstrakhan/OOPAstrakhan.vcxproj
+++ b/OOPAstrakhan/OOPAstrakhan.vcxproj
@@ -27,7 +27,7 @@
     <ProjectGuid>{5b541dee-95ee-4924-91a3-540c0520fd49}</ProjectGuid>
     <RootNamespace>OOPAstrakhan</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Intro</ProjectName>
+    <ProjectName>Introduction</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
